本地文件全部提交1

--- a/我的计划.md
+++ b/我的计划.md
@@ -1,6 +1,44 @@
+### 购书计划
+
+数据结构
+
+基础算法
+
+操作系统原理
+
+网络原理
+
+编译原理
+
+高等数学
+
+其他
+
+《程序员思维修炼》
+
+《程序开发心理学》
+
+-----------------------------------------------------
+
+
+
 #### 搭建自己的博客
 
+####  spring-security CAS
+
+
+
+#### flyway
+
+#### gradle
+
 -------------------------
+
+### springCloud
+
+-----------------
+
+
 
 
 
