--- a/日常工作内容.md
+++ b/日常工作内容.md
@@ -6,13 +6,17 @@
 
 找优秀的人学习
 
-####  spring-security CAS
+生于天地之间
 
+---------------
 
+2020年3月19日
 
-#### flyway
+下一阶段：
 
-#### gradle
+- [ ] security总结
+- [ ] spring-cloud
+- [ ] jsp项目依赖总结
 
 ------------------
 
@@ -36,8 +40,8 @@
 
 2020年3月6日
 
-- [ ] swagger在eunomia-spring-boot项目中使用
-- [ ] SWAGGER2 使用学习
+- [x] swagger在eunomia-spring-boot项目中使用
+- [x] SWAGGER2 使用学习
 
 ------------------
 
