--- a/ls/数据源信息.md
+++ b/ls/数据源信息.md
@@ -32,3 +32,5 @@ jdbc.datasource.default.username=eunomia
 jdbc.datasource.default.password=eunomia
 ```
 
+ 172.19.16.99 5236 登录用户名密码 例如：psd_msg/psd_msg123456 【oracle开发库】 172.19.0.100:1521:amber21devdb 用户名和密码一致 
+例如：psd_msg/psd_msg
