--- a/写给自己.md
+++ b/写给自己.md
@@ -6,6 +6,22 @@
 - INSISTENCE
 - 
 
+-----------------
+
+看书半小时
+
+阅读博客1小时
+
+《算法导论》1小时
+
+
+
+--------------------
+
+
+
+
+
 
 
 多向牛逼的人请教学习。
@@ -23,3 +39,25 @@
 你有哪些拍板的表现
 
 需要怎么做，才能有拍板的能力。
+
+
+
+
+
+柑柠檬就是为了香水而存在。
+
+人又是为了什么而活着。
+
+有人说他天生就是干石油的，有人说他天生就是干工程的，有人说他天生就是做生意的。
+
+又有人说，兴趣是干出来的。
+
+或许没什么是天生的，只是选择了一件事，就一直干好它。
+
+或者你有选择，或者你没有。
+
+我没得选，我在这家公司，就应该把现在的项目，做好。很难做，但这是我要做的事。
+
+定好了，我该如何做这件事？
+
+我需要去和我的领导同事沟通，理清楚现状。
