--- a/我的计划.md
+++ b/我的计划.md
@@ -1,3 +1,33 @@
+配置的原理。
+
+​	外部配置中心。
+
+多数据源配置使用原理。
+
+继续spring-security学习
+
+​	暂时不考虑cas\oauth2,就参照用户名密码数据库方式认证。
+
+​	cas
+
+​	oauth2
+
+​	
+
+---------------
+
+
+
+
+
+
+
+# Spring-Security博客输出计划
+
+
+
+-------------------------------------
+
 ### 购书计划
 
 数据结构
@@ -18,7 +48,19 @@
 
 《程序开发心理学》
 
+
+
+------------
+
+### 错误报告和监控
+
 -----------------------------------------------------
+
+### 计算机网络原理
+
+
+
+-------------------
 
 
 
