--- a/日常工作内容.md
+++ b/日常工作内容.md
@@ -8,18 +8,165 @@
 
 生于天地之间
 
+
+
+注意api的使用，避免重复找轮子，思考如何优化现有的框架。
+
+commons.apache.org
+
+---------------------------
+
+2020年4月7日
+
+- [ ] 检查一下未提交的代码
+- [ ] 讨论一下目前的框架底层springboot应用是否合理。
+  - 排除springboot的某些自动配置，独立于spingboot，等于基于spring开发
+  - 现阶段，就是说将xml改造成java注解配置形式。
+  - 也就是等于重复制造了新的轮子。
+- [ ] 阶段性工作内容：
+  - 
+
+--------------
+
+2020年4月4日
+
+- [ ] mybatis的全部内容
+  + 给不同包使用不同的数据源
+  + 数据源的动态切换（这里应该是通过代理的）
+
+---------------------------
+
+2020年4月3日
+
+测试 头像上传、安全、各模块数据、安全策略、
+
+--------
+
+
+
+2020年4月2日
+
+- [ ] spring-security 模块改造
+
+  - 暂时先将原来的项目改造成springBoot
+- 需要考虑后续可能添加一些新的安全内容
+- [x] spring interceptor 工作原理
+
+---------------
+
+
+
+2020年4月1日
+
+- [x] poseidon 分析如何根据数据源，只要配置包名，就可以。
+
+-----------------------
+
+2020年3月30日
+
+- [ ] java 安全规范
+
+---------------------
+
+2020年3月28日
+
+----------------
+
+- [x] `spring cloud` 视频
+
+  后续继续看视频
+
+- [ ] `spring-security` 的整理
+  
+  + cas
+  + oauth2
+  + 公司的产品如何优化，痛点是什么，如何更好的提供出去
+  
+- [ ] 总结最近一段时间干了啥
+
+-------------------
+
+2020年3月26日
+
+- [ ] authenticationManager 认证接口的调用
+
+  + 从哪里，什么时候开始调用的？
+  
+- [ ] 错误报告原理
+
+- [ ] 数据库连接池技术 dpcp c3p0 各种分析 common apache  ,tomcat apache
+
+- [x] jar 
+
+  还需要做什么？
+
+  html?
+
+- [x] 测试web项目打成war包和jar包的区别
+
+  jar有一个BOOT-INF文件夹，这里面存了classes,就是类文件，还有lib
+
+  war会把页面打到war包。
+
+
+
+------------------------------
+
+2020年3月25日
+
+- [x] security 中filter 的顺序，以及对filter的是否能定制处理逻辑
+
+  > 这里有一个顺序控制类的，定义了框架中所有的使用的filter的顺序。
+  >
+  > 在我们添加自定义的filter可以使用pre 和after的方式，或者通过order方式定义
+  >
+  > 注意filter的顺序是很重要的
+
+- [x] 在eunomia中的filter是否实现security中的SecurityFilterChain。
+
+  > 并没有，
+  >
+  > 但是这个类很关键 SecurityFilterChain
+  >
+  > spring-security可以有很多SecurityFilterChain，但是最终只有一个会被匹配。
+  >
+  > 可以用于oauth整合、jwt整合，也可以用于处理不需要安全处理的路径。
+  >
+  > **也就是说所有的链都必须实现该类**
+  >
+  > 默认的**`DefaultSecurityFilterChain`**
+
+- [ ] 继续spring security的研究和总结，包括里面的cors
+
+- [x] grassfish?
+
+  服务器，不同于tomcat，
+
+  各种特点：。。。
+
+-----------------------------
+
 2020年3月24日
 
 - [x] 查看我们今年的任务
-- [ ] 继续spring security的研究和总结，包括里面的cors
 
 -----------------------------
 
 2020年3月23日
 
-- [ ] security 中filter 的顺序，以及对filter的是否能定制处理逻辑，在eunomia中的filter是否继承security中的filter。
-- [ ] security 基于servlet,为什么必须Servlet?
-- [ ] 
+- [x] security 基于servlet,为什么必须Servlet?
+
+  真的必须基于servlet吗，那非web应用怎么办？
+
+  这里是否是使用interceptor?
+
+  > 这里需要先搞清什么是servlet？
+  >
+  > 这是一种规范，我的理解是不管什么容器，在端口接受网络请求数据的时候，通过实现servlet规范接口，交给servlet来处理。
+  >
+  > 所以基于servlet规范的服务器，都会进过servlet来处理，而servlet中定义了filter接口，所以spring-security就可以正常工作。
+  
+  
 
 ---------------
 
@@ -43,11 +190,6 @@
   + 什么东西放到poseidon-web-starter中，什么东西需要单独放。
   + 总的posedion-starter-,其中可以有很多starter.
 - [ ] spring cloud config
-- [ ] 
-
-
-
-
 
 --------------------------
 
