--- a/每日英语.md
+++ b/每日英语.md
@@ -2,9 +2,19 @@
 
 
 
+2020年4月2日
+
+fascinated 
+
+postponed 延期
+
+NBA have been postponed
+
+we have decided,after much considertation,to cancel the following events:
 
 
 
+>There is no "one way" to The Apache Way. The ASF is not dictatorial and will never compel a rigid path to implement our process, as we believe flexibility is integral to [The Apache Way to Sustainable Open Source Success](https://s.apache.org/GhnI).
 
 ---------------------------------------------------
 
