--- a/日常工作内容.md
+++ b/日常工作内容.md
@@ -14,6 +14,24 @@
 
 commons.apache.org
 
+>zookeeper源码的查看，然后视频
+>
+>dubbo源码查看，视频
+>
+>spring-cloud的相关搭建、启动，看视频,kafaka。。。
+>
+>基础知识的深入学习
+>
+>学过的东西总结，比如spring-security、mybatis所有的东西总结
+>
+>
+
+
+
+
+
+
+
 ---------------------------
 
 2020年4月7日
